# selfplay

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  qa-docker.sh  requirements.txt  selfplay-code-review.yaml  selfplay.yaml
docs/: agent-scale-plan.md  architecture-diagrams.md  architecture-mermaid-pdca.md  architecture.md  docker-qa-capability-matrix.md  docker-qa-report-2026-05-10.md  docker-qa-report-2026-05-11.md  docker-qa-report-2026-05-12.md  docker-qa-report-phase2.1-2026-05-11.md  docker-qa-report-phase2.3-2026-05-11.md  docker-qa-report-real-tasks-2026-05-11.md  docker-qa-sop.md  docker.md  dogfooding-report.md  external-review-requests.md  launch-execution-checklist.md  mermaid-pdca-docker-qa.md  phase1-implementation-spec.md  phase2-config-driven-evaluator.md  phase2.3-docker-qa-plan.md  phase3-report.md  prototype-plan.md
examples/: selfplay-claude-evolution.yaml  selfplay-projdevbench.yaml
research/: GRB-self-reference-minimal-closed-loop.md  GRB-self-reference-theory-report.md  architecture-mermaid-diagrams.md  blog-self-referential-agents.md  chinese-community-competitive-review.md  chinese-community-launch-copy.md  cli-tui-trpc-tech-report.md  competitive-growth-deep-dive.md  evaluation-criteria-report.md  external-project-audit-framework.md  external-project-audit-report.md  pmf-analysis.md  product-definition-positioning.md  projdevbench-profile-academic-validation.md  readme-repositioning-draft.md  readme-strange-loop-copy.md  sdk-agent-architecture-report.md  selfplay-mom-test-interview.md  show-hn-launch-strategy.md  strange-loop-three-layers.md  user-feedback-insights.md
(+24 files in other folders)
